@@ -1,4 +1,4 @@
 DIST subsonic-4.4-src.zip 8214761 RMD160 fbadab0031221c7a20ff56b526ce6f63a9d79c7b SHA1 f27c30bfa6934c086f1ecce7cef2620564f26598 SHA256 365976466bef3cfa990d779c5ff757f31c9de26990bc2e5e4a7151885efbe229
-EBUILD subsonic-4.4.ebuild 2248 RMD160 51a00d3c45b0a65efe16c7905db5ede47a7fcb7e SHA1 d89cedaa4f003c0f340d3aba4279be8f11b328a2 SHA256 59e711db09e0b1a82013e2dfc389b65f371a97f6258b680d2aebd8023d0dd154
-MISC ChangeLog 455 RMD160 8172ded0c03ab35bde94ac04118991b797d0b4a3 SHA1 9abe3d9cb0ee4201d8b8823f70ff629cfb2f8f80 SHA256 ce687ad395e3d7750933ebf207883770a4a57967743d992c2c198f888d5f4d41
-MISC metadata.xml 375 RMD160 03670841a6f60ee7ae3e874507e5a20ab23c1961 SHA1 dc49b60cdd8512fd4f3cde9eb370d65b6838252f SHA256 5913d8cf54fb7bddccbf83263f2e21978342321e2b77f4d6f5d64d3e21c318b4
+EBUILD subsonic-4.4.ebuild 1572 RMD160 7c2a2927f591eaf9dec9c47df0d5c0c56c91c787 SHA1 68a683829e40344237f3d54d97f818e392cf0134 SHA256 fc6cdd5a372b181b0f8c6992ef252aaefbd863bf7478e7150f0aa981e5282279
+MISC ChangeLog 700 RMD160 456d2ace936e2bbb88e0ed55a96731d76341d5d2 SHA1 a0856c75c858a83acd352604fad2dca6f62c13cd SHA256 614dba8d0693ba245f2933d66e1b76b65493976fd99bf12836b28727b72a181b
+MISC metadata.xml 221 RMD160 52dde43b09fd52c7fca2d101da4536746167b29f SHA1 ce96a105913fc721fb928a0d8216b11fa387b869 SHA256 d114187ee5bb84d05e5d0654deb9148f2b4100c127266eca82b49ba011941616
